# cert-keeper

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: release.yaml
k8s/: deployment.yaml  serviceaccount.yaml  vault-policy.hcl
src/: config.rs  error.rs  main.rs
src/cert/: manager.rs  store.rs
src/proxy/: forwarder.rs  mod.rs  tls_acceptor.rs
src/vault/: auth.rs  client.rs  pki.rs
