[package]
name = "cert-keeper"
version = "0.1.0"
edition = "2021"
description = "Kubernetes sidecar for Vault PKI TLS certificate management and termination"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
webpki-roots = "0.26"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
